[package]
name = "pecocloud-vm-mgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
etcd-client = "0.12.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["macros", "json", "postgres", "uuid"] }
uuid = { version = "1.7.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
] }
reqwest = { version = "0.11.24", features = ["json"] }
rustcracker = "1.1.0"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
log = { version = "0.4.20", features = ["kv_unstable_serde", "serde"] }
log4rs = "1.3.0"
tokio = "1.36.0"
run_script = "0.10.1"

[[bin]]
name = "mimic_client"

[[bin]]
name = "mimic_server"
